wip: server runs some post and get endpoints tested
